Creacion de  un commando para importar
INSTALL => composer require symfony/finder

Run =>  php bin/console app:import-media

.ENV => UPLOAD_DIR=

--- a/.env
+++ b/.env
@@ -30,3 +30,4 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 
 ### DATABASE CONFIG
 DATABASE_URL="mysql://root@127.0.0.1:3306/test_php_developer"
+UPLOAD_DIR=public/uploads
