--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
+        "symfony/finder": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/orm-pack": "^1.0",
