Commit 10  Rest API

--- a/.env
+++ b/.env
@@ -31,3 +31,17 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ### DATABASE CONFIG
 DATABASE_URL="mysql://root@127.0.0.1:3306/test_php_developer"
 UPLOAD_DIR=public/uploads
+
+###> lexik/jwt-authentication-bundle ###
+# Key paths should be relative to the project directory
+JWT_PRIVATE_KEY_PATH=config/jwt/private.pem
+JWT_PUBLIC_KEY_PATH=config/jwt/public.pem
+JWT_PASSPHRASE=123456
+JWT_TOKENTTL=3600
+###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
+
+CORS_ALLOW_ORIGIN=*
