--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,12 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: auto
+            algorithm: sha512
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+        api_user_provider:
             entity:
                 class: App\Entity\User
                 property: username
@@ -14,14 +14,25 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+        login:
+            pattern:  ^/api/login
+            stateless: true
             anonymous: true
+            form_login:
+                check_path:               /api/login_check
+                success_handler:          lexik_jwt_authentication.handler.authentication_success
+                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+                require_previous_session: false
+        api:
+            pattern:   ^/api/v1
+            stateless: true
+            anonymous: false
+            provider: api_user_provider
             guard:
                 authenticators:
-                    - App\Security\LoginFormAuthenticator
-            logout:
-                path: app_logout
-            
+                    - lexik_jwt_authentication.jwt_token_authenticator
+        main:
+            anonymous: true    
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
@@ -31,11 +42,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: '^/homepage', roles: ROLE_USER }
-        - { path: '^/', roles: ROLE_USER }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/api/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/api/v1,       roles: IS_AUTHENTICATED_FULLY }
 
 
         
