--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,6 @@
-index:
-    path: /
-    controller: App\Controller\HomepageController::index
-app_logout:
-    path: /logout
+app.swagger_ui:
+    path: /api/doc
     methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+api_login_check:
+    path:     api/login_check
